# SemanticModellingFramework

./: CMakeLists.txt  README.md  p2head_config.cfg
Constraints/: CMakeLists.txt
Constraints/include/: closenessconstraint.h  constraint.h  edgestrainconstraint.h  lineconstraint.h  orientationconstraint.h  planeconstraint.h  polylinelengthconstraint.h  similarityconstraint.h  solver.h  types.h  uniformlaplacianconstraint.h
Constraints/src/: closenessconstraint.cpp  edgestrainconstraint.cpp  lineconstraint.cpp  main.cpp  orientationconstraint.cpp  planeconstraint.cpp  polylinelengthconstraint.cpp  similarityconstraint.cpp  solver.cpp  uniformlaplacianconstraint.cpp
NonRigidRegistration/: CMakeLists.txt
NonRigidRegistration/apps/: CMakeLists.txt
NonRigidRegistration/apps/points2head/: Pipeline.cpp  main.cpp
NonRigidRegistration/apps/points2head/config/: Config.cpp  Config.h
NonRigidRegistration/data/: cameras_body.xml  cameras_face.xml  deploy.sh  p2c_config.cfg  p2head_config.cfg  start_body_and_optional_face_fitting.sh  start_head_fitting.sh
NonRigidRegistration/data/scripts/bash/: 00_convert_images.sh  01_prepare_body.sh  01_prepare_face.sh  01_prepare_hand.sh
NonRigidRegistration/data/scripts/photoscan/: photos2points.py  texturize.py
NonRigidRegistration/doc/: Doxyfile  Readme.txt  mainpage.dox
NonRigidRegistration/graphene/: CMakeLists.txt
NonRigidRegistration/graphene/character/: CMakeLists.txt
NonRigidRegistration/graphene/character/data_structure/: Blendshapes.cpp  Blendshapes.h  Character.cpp  Character.h  DAE_loader.cpp  DAE_loader.h  IO.h  Joint.h  Retargeting.cpp  Skeleton.cpp
NonRigidRegistration/graphene/character/data_structure/algorithms/: compute_skinning_cor.cpp  compute_skinning_cor.h
NonRigidRegistration/graphene/character/data_structure/fbxfile/: fbx_file.cpp  fbx_file.h
NonRigidRegistration/graphene/character/scene_graph/: CMakeLists.txt  Character_node.cpp  Character_node.h
NonRigidRegistration/graphene/geometry/: CMakeLists.txt  Point_BSP_tree.cpp  Point_set.h  Quaternion.h  Vector.h  registration.h
NonRigidRegistration/graphene/gl/: CMakeLists.txt~  Framebuffer.h  GL_state.cpp  Shadow_map.cpp  Texture.cpp  Texture.h
NonRigidRegistration/graphene/gl/post_processing/: PP_ambientocclusion.h  PP_blur.cpp  PP_blur.h  PP_linearize_z.cpp  PP_linearize_z.h  PP_mix.cpp  PP_shadow_mapping.cpp  PP_shadow_mapping.h  PP_subsurface_scattering.h  Post_process.h  Post_processes.h  Post_processing.cpp  Quad.h
NonRigidRegistration/graphene/gl/shaders/: cylinder.fsh  cylinder_shadowmap.fsh  image.gs  mesh_shadowmap.vsh  normalspecmapping.fs  point.fsh  point.vsh  pp_ambientocclusion.fsh  pp_blur.fsh  pp_mix.fsh  pp_shadowmapping.fsh  pp_subsurface_scattering.fsh  quad.fs  quad.gs  skinning.vs  slide.fs  slide.vs  sphere_shadowmap.fsh  unwrap.vsh
NonRigidRegistration/graphene/gl/skin_subsurface_scattering/: Skin_subsurface_scattering.cpp  Skin_subsurface_scattering.h
NonRigidRegistration/graphene/pointset_processing/: Pointset_processing.h  Subsampling.h
NonRigidRegistration/graphene/scene_graph/: Lasso_selection_node.cpp  Lasso_selection_node.h  Operations.h  Point_set_node.cpp  Point_set_node.h  Scene_graph.h
NonRigidRegistration/graphene/surface_mesh/algorithms/: CMakeLists.txt
NonRigidRegistration/graphene/surface_mesh/algorithms/character_generator/: Character_generator.cpp
NonRigidRegistration/graphene/surface_mesh/algorithms/headtemplatefittingtools/: Blendshapes_generation.cpp  Blendshapes_generation.h  Eyelid_fitting_helper.h  Eyes_correction_helper.cpp  Eyes_correction_helper.h  Eyes_helper.h  Teeth_correction_helper.cpp  Teeth_correction_helper.h
NonRigidRegistration/graphene/surface_mesh/algorithms/pca/: PCA.cpp  PCA_opencv.h
NonRigidRegistration/graphene/surface_mesh/algorithms/posefitting/: IKPose_fit.h
NonRigidRegistration/graphene/surface_mesh/algorithms/subdivision/: linear_subdivision.h
NonRigidRegistration/graphene/surface_mesh/algorithms/surface_mesh_tools/: crease_normals.h  misc.cpp  misc.h
NonRigidRegistration/graphene/surface_mesh/algorithms/templatefitting/: Energy.cpp  Energy.h  Landmarks_manager.cpp  Landmarks_manager.h  (+2 more)
NonRigidRegistration/graphene/surface_mesh/data_structure/: CMakeLists.txt  IO_obj.cpp  IO_ply.cpp  IO_poly.cpp  Surface_mesh.h  properties.h
NonRigidRegistration/graphene/surface_mesh/eigen_algorithms/: CMakeLists.txt
NonRigidRegistration/graphene/surface_mesh/scene_graph/: CMakeLists.txt  Surface_mesh_node.cpp  Surface_mesh_node.h
NonRigidRegistration/graphene/utility/: CMakeLists.txt
NonRigidRegistration/io/: CMakeLists.txt  Loader.cpp
NonRigidRegistration/src/: CMakeLists.txt
NonRigidRegistration/src/apps/points2character/: CMakeLists.txt  P2C_window.cpp  P2C_window.cpp~  P2C_window.h  Pipeline.cpp  Pipeline.h
NonRigidRegistration/src/apps/points2head/: CMakeLists.txt  Pipeline.cpp  Pipeline.h
NonRigidRegistration/src/graphene/: types.h
NonRigidRegistration/src/graphene/geometry/: Bounding_box.h  Bounding_box_2D.h  CMakeLists.txt  Dual_quaternion.h  Matrix3x3.h  Matrix4x4.h  Point_BSP_tree.h  Point_set.cpp
NonRigidRegistration/src/graphene/gl/: CMakeLists.txt  Framebuffer.cpp  GL_state.h  Shader.cpp  Shader.h  Shadow_map.h  Texture.cpp  Trackball.h  gl_includes.h
NonRigidRegistration/src/graphene/pointset_processing/: CMakeLists.txt  Pointset_processing.cpp  Subsampling.cpp
NonRigidRegistration/src/graphene/scene_graph/: Base_node.cpp  Base_node.h  CMakeLists.txt  Object_node.cpp  Object_node.h  Scene_graph.cpp
NonRigidRegistration/src/graphene/surface_mesh/: CMakeLists.txt
NonRigidRegistration/src/graphene/utility/: Logger.h
NonRigidRegistration/src/io/: Loader.h
Slicer/: CMakeLists.txt
Slicer/include/: clusterthread.h  contourcontainmenttreenode.h  maarcpath.h  manode.h  multiplyconnectednode.h  slice.h  slicer.h  slicingthread.h  treenode.h  trianglehelper.h
Slicer/src/: .gitignore  clusterthread.cpp  contourcontainmenttreenode.cpp  maarcpath.cpp  manode.cpp  slice.cpp  slicer.cpp  slicingthread.cpp  treenode.cpp  trianglehelper.cpp
(+494 files in other folders)
